# frontend/openapi.json
@@ -2094,6 +2094,28 @@
             ],
             "title": "Type"
           },
+          "derived_from": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Derived From"
+          },
+          "bounding_box": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Bounding Box"
+          },
           "files": {
             "items": {
               "type": "string"
